# agent-lab

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  FUTURE_IDEAS.md  LICENSE  README.md
.github/: copilot-instructions.md
initial-sendbox/test-project/: README.md  pyproject.toml
initial-sendbox/test-project/tests/: conftest.py  test_dataset.py  test_model.py
references/hakathon_sendbox/: .env.example  .gitignore  AGENTS.md  BRICKS_TODO.md  CLAUDE.md  Justfile  README.md  pyproject.toml
references/hakathon_sendbox/.claude/agents/: code-reviewer.md
references/hakathon_sendbox/.claude/instructions/general/: tdd.md
references/hakathon_sendbox/.claude/instructions/hardware/: README.md  debug-lessons.md
references/hakathon_sendbox/.claude/skills/executing-plans/: SKILL.md
references/hakathon_sendbox/.claude/skills/kicad-board-design/: SKILL.md
references/hakathon_sendbox/challenges/starters/clock/esp32/: platformio.ini
references/hakathon_sendbox/demos/alive_test/esp32/: platformio.ini
references/hakathon_sendbox/demos/alive_test/fpga/: alive_test.qsf
references/hakathon_sendbox/demos/internet_clock/esp32/: platformio.ini
references/hakathon_sendbox/projects/common/esp32/: button.h  buzzer.h  led.h  oled.h  packet.h  uart_fpga.h  wifi_ntp.h
references/hakathon_sendbox/projects/common/fpga/: adc.README.md  alu.sv  ascii_num_parser.sv  bcd_counter.sv  bin2bcd.sv  button_debounce.sv  compositor.sv  edge_detect.sv  lcd_ctrl.README.md  packet_decoder.sv  periphery_control.sv  pins.svh  sprite.sv  tick_gen.sv  uart_line_rx.sv  uart_tx.sv  vga_sync.sv
(+289 files in other folders)
