[project]
name = "fall-detection-mini"
version = "0.1.0"
description = "Tiny audio-based fall detection classifier for agent pipeline testing"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
