[project]
name = "crashtech-2026-hackathon"
version = "0.1.0"
description = "24h FPGA (DE10-Lite) + ESP32 + KiCad hackathon workspace"
requires-python = ">=3.11"
authors = [{ name = "Barak Ariely", email = "barak.ariely@gmail.com" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
